{
    "name": "GameInput",
    "maps": [
        {
            "name": "Gameplay",
            "id": "6a348fcc-f5a7-41a8-a146-b90f924811f7",
            "actions": [
                {
                    "name": "MousePressed",
                    "type": "Button",
                    "id": "4a6654c5-51dc-44a8-a3e4-6dd51897ad3e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "49b0bd79-b046-4c73-9dd7-6741b565f8c6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7b194c91-68b4-441e-b025-edbc8d4c1b22",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "MousePressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dfc34e74-a0ce-47b9-9530-134537c9c1db",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Dialog",
            "id": "566f1b08-d234-4bdd-ab51-9052c0d4d7fb",
            "actions": [
                {
                    "name": "MoveToNextDialog",
                    "type": "Button",
                    "id": "4c5fdaae-18c0-43bf-b417-155559f008d6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fdf1dca8-c557-4cf0-a4e6-7eb9beea856a",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveToNextDialog",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a73cb4e7-be8d-4499-8c68-418f42a39f96",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveToNextDialog",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "9af49ffd-414b-40a8-acb4-c8ef5e32c145",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "4f60ffce-6f97-4a75-b25f-0e3b579d3d3a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "55a26cfa-579a-4e22-adfb-d30ee4429d69",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}